Finalised the content and updated the readme file

--- a/about.html
+++ b/about.html
@@ -9,51 +9,46 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <svg id="fader" class="fade-out">
-    <div id="menuToggler">
-      <div></div>
-      <div></div>
+  <svg id="fader" class="fade-out"></svg>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <div class="homelink-container">
+      <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
+      <h4 class="homelink-sub">Software Engineering Student</h4>
     </div>
-    <header>
-      <div class="homelink-container">
-        <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
-        <h4 class="homelink-sub">Software Engineering Student</h4>
-      </div>
-      <section class="nav-bar">
-        <nav>
-          <a class="nav" href="about.html">About</a>
-          <div></div>
-          <a class="nav" href="index.html#img-segment">Projects</a>
-          <div></div>
-          <a class="nav" href="contact.html">Contact</a>
-        </nav>
+    <section class="nav-bar">
+      <nav>
+        <a class="nav" href="about.html">About</a>
+        <div></div>
+        <a class="nav" href="index.html#img-segment">Projects</a>
+        <div></div>
+        <a class="nav" href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main class="about">
+    <section class="top-about">
+      <div class="about-img"></div>
+      <section class="about-description">
+        <h2>Hello!</h2>
+        <p class="about">My name is Hugh Alun-Jones and I am a software engineering student currently based in Leicestershire. I created this website to show off some of my <a class="about-project-link" href="index.html#img-segment">work and projects</a>, this website being one of them!</p>
+        <p class="about">I will be graduating with a BSc Software Engineering in 2021 and I am now seeking work opportunities. Although I now spend much of my spare time in front of an IDE, when I can I ejoy playing video games or reading fiction.</p>
       </section>
-    </header>
-    <main class="about">
-      <section class="top-about">
-        <div class="about-img" alt="An image of Hugh Alun-Jones"></div>
-        <section class="about-description">
-          <h2>Hello!</h2>
-          <p class="about">My name is Hugh Alun-Jones and I am a software engineering student currently based in Leicestershire. I created this website to show off some of my <a class="about-project-link" href="index.html#img-segment">work and projects</a>, this website being one of them!</p>
-          <p class="about">My current focus is on web development and game design, but I'm always looking to learn more.</p>
-        </section>
-      </section>
-      <div class="about-border"></div>
-      <section class="currently-reading">
-        <h2 class="c-r-header">Currently reading</h2>
-        <div class="currently-reading-container">
-
-        </div>
-      </section>
-    </main>
-    <div class="footer">
-      <footer>
-        <section class="social-icons">
-          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
-        </section>
-      </footer>
-    </div>
-  </svg>
+    </section>
+    <div class="about-border"></div>
+    <section class="currently-reading">
+      <h2 class="c-r-header">Currently reading</h2>
+      <div class="currently-reading-container"></div>
+    </section>
+  </main>
+  <footer>
+    <section class="social-icons">
+      <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
+    </section>
+  </footer>
   <script src="js/scripts.js"></script>
   <script src="js/current-reading.js"></script>
 </body>
