--- a/contact.html
+++ b/contact.html
@@ -9,40 +9,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <svg id="fader" class="fade-out">
-    <div id="menuToggler">
-      <div></div>
-      <div></div>
+  <svg id="fader" class="fade-out"></svg>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <div class="homelink-container">
+      <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
+      <h4 class="homelink-sub">Software Engineering Student</h4>
     </div>
-    <header>
-      <div class="homelink-container">
-        <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
-        <h4 class="homelink-sub">Software Engineering Student</h4>
-      </div>
-      <section class="nav-bar">
-        <nav>
-          <a class="nav" href="about.html">About</a>
-          <div></div>
-          <a class="nav" href="index.html#img-segment">Projects</a>
-          <div></div>
-          <a class="nav" href="contact.html">Contact</a>
-        </nav>
-      </section>
-    </header>
-    <main class="contact">
-      <section class="contact-info">
-        <p class="contact-p">Get in touch:</p>
-        <p class="email"><a href="mailto:hughalunjones12@gmail.com">hughalunjones12@gmail.com</a></p>
-      </section>
-    </main>
-    <div class="footer">
-      <footer>
-        <section class="social-icons">
-          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
-        </section>
-      </footer>
-    </div>
-  </svg>
+    <section class="nav-bar">
+      <nav>
+        <a class="nav" href="about.html">About</a>
+        <div></div>
+        <a class="nav" href="index.html#img-segment">Projects</a>
+        <div></div>
+        <a class="nav" href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main class="contact">
+    <section class="contact-info">
+      <p class="contact-p">Get in touch:</p>
+      <p class="email"><a href="mailto:hughalunjones12@gmail.com">hughalunjones12@gmail.com</a></p>
+    </section>
+  </main>
+  <footer>
+    <section class="social-icons">
+      <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
+    </section>
+  </footer>
   <script src="js/scripts.js"></script>
 </body>
 </html>
