--- a/index.html
+++ b/index.html
@@ -9,61 +9,58 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <svg id="fader" class="fade-out">
-    <div id="menuToggler">
-      <div></div>
-      <div></div>
-    </div>
-    <header>
-      <h3 class="h3-index"><a class="nav" href="index.html">Hugh Alun-Jones</a></h3>
-      <section class="nav-bar">
-        <nav >
-          <a class="nav" href="about.html">About</a>
-          <div></div>
-          <a class="nav" href="#img-segment">Projects</a>
-          <div></div>
-          <a class="nav" href="contact.html">Contact</a>
-        </nav>
-      </section>
-    </header>
-    <main>
-      <section class="hero-banner">
-        <div class="full-title">
-          <div class="title">
-            <h1>Hugh</br>Alun-Jones</h1>
-          </div>
-          <div class="sub-title">
-            <h2>Software Engineering Student at De Montfort University</h2>
-          </div>
+  <svg id="fader" class="fade-out"></svg>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <h3 class="h3-index"><a class="nav" href="index.html">Hugh Alun-Jones</a></h3>
+    <section class="nav-bar">
+      <nav >
+        <a class="nav" href="about.html">About</a>
+        <div></div>
+        <a class="nav" href="#img-segment">Projects</a>
+        <div></div>
+        <a class="nav" href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main>
+    <section class="hero-banner">
+      <div class="full-title">
+        <div class="title">
+          <h1>Hugh<br>Alun-Jones</h1>
         </div>
-        <div class="img-banner"></div>
-        <section class="sous-img">
-          <p class="sous-quote">I will be graduating with a BSc Software Engineering in 2021 and I am now seeking work opportunities.</p>
-        </section>
-      </section>
-      <section id="img-segment">
-        <div class="project-segment">
-          <h3 class="project-title">Museum Game</h3>
-          <a class="nav" href="work.html?id=0" rel=nofollow>
-            <div class="project-img one" alt="An art gallery scene in a pixel art style"></div>
-          </a>
+        <div class="sub-title">
+          <h2>Software Engineering Student at De Montfort University</h2>
         </div>
-        <div class="project-segment">
-          <h3 class="project-title">Portfolio Website</h3>
-          <a class="nav" href="work.html?id=1" rel=nofollow>
-            <div class="project-img two" alt="A collection of Javascript, HTML and CSS code"></div>
-          </a>
-        </div>
+      </div>
+      <img class="img-banner" src="./images/heroImage.jpg" alt="A collage of the Unity editor, Visual Studio and paint.net">
+      <section class="under-img">
+        <p class="under-quote">With a focus on web design and game development I am now seeking work opportunities.</p>
       </section>
-    </main>
-    <div class="footer">
-      <footer>
-        <section class="social-icons">
-          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
-        </section>
-      </footer>
-    </div>
-  </svg>
+    </section>
+    <section id="img-segment">
+      <div class="project-segment">
+        <h3 class="project-title">Museum Game</h3>
+        <a class="nav" href="work.html?id=0" rel=nofollow>
+          <div class="project-img one"></div>
+        </a>
+      </div>
+      <div class="project-segment">
+        <h3 class="project-title">Portfolio Website</h3>
+        <a class="nav" href="work.html?id=1" rel=nofollow>
+          <div class="project-img two"></div>
+        </a>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section class="social-icons">
+      <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
+    </section>
+  </footer>
   <script src="js/scripts.js"></script>
 </body>
 </html>
