--- a/work.html
+++ b/work.html
@@ -9,44 +9,41 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <svg id="fader" class="fade-out">
-    <div id="menuToggler">
-      <div></div>
-      <div></div>
+  <svg id="fader" class="fade-out"></svg>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <div class="homelink-container">
+      <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
+      <h4 class="homelink-sub">Software Engineering Student</h4>
     </div>
-    <header>
-      <div class="homelink-container">
-        <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
-        <h4 class="homelink-sub">Software Engineering Student</h4>
-      </div>
-      <section class="nav-bar">
-        <nav>
-          <a class="nav" href="about.html">About</a>
-          <div></div>
-          <a class="nav" href="index.html#img-segment">Projects</a>
-          <div></div>
-          <a class="nav" href="contact.html">Contact</a>
-        </nav>
+    <section class="nav-bar">
+      <nav>
+        <a class="nav" href="about.html">About</a>
+        <div></div>
+        <a class="nav" href="index.html#img-segment">Projects</a>
+        <div></div>
+        <a class="nav" href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main class="main-projects">
+    <div class="projects-container">
+      <section id="project-one" class="projectX">
       </section>
-    </header>
-    <main class="main-projects">
-      <div class="projects-container">
-        <section id="project-one" class="projectX">
-        </section>
-      </div>
-      <section class="nav-dot">
-        <a class="nav" href="work.html?id=0"><div class="dot"> <p class="dotnum">1</p> </div></a>
-        <a class="nav" href="work.html?id=1"><div class="dot"> <p class="dotnum">2</p> </div></a>
-      </section>
-    </main>
-    <div class="footer">
-      <footer>
-        <section class="social-icons">
-          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
-        </section>
-      </footer>
     </div>
-  </svg>
+    <section class="nav-dot">
+      <a class="nav" href="work.html?id=0"><div class="dot"> <p class="dotnum">1</p> </div></a>
+      <a class="nav" href="work.html?id=1"><div class="dot"> <p class="dotnum">2</p> </div></a>
+    </section>
+  </main>
+  <footer>
+    <section class="social-icons">
+      <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
+    </section>
+  </footer>
   <script src="js/projects.js"></script>
   <script src="js/scripts.js"></script>
 </body>
