--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <section class="about-description">
         <h2>Hello!</h2>
         <p class="about">My name is Hugh Alun-Jones and I am a software engineering student currently based in Leicestershire. I created this website to show off some of my <a class="about-project-link" href="index.html#img-segment">work and projects</a>, this website being one of them!</p>
-        <p class="about">I will be graduating with a BSc Software Engineering in 2021 and I am now seeking work opportunities. Although I now spend much of my spare time in front of an IDE, when I can I ejoy playing video games or reading fiction.</p>
+        <p class="about">I will be graduating with a BSc Software Engineering in 2021 and I am now seeking work opportunities. Although I now spend much of my spare time in front of an IDE, when I can I enjoy playing video games or reading fiction.</p>
       </section>
     </section>
     <div class="about-border"></div>
