Added a new navigation dot

--- a/work.html
+++ b/work.html
@@ -37,6 +37,7 @@
     <section class="nav-dot">
       <a class="nav" href="work.html?id=0"><div class="dot"> <p class="dotnum">1</p> </div></a>
       <a class="nav" href="work.html?id=1"><div class="dot"> <p class="dotnum">2</p> </div></a>
+      <a class="nav" href="work.html?id=2"><div class="dot"> <p class="dotnum">3</p> </div></a>
     </section>
   </main>
   <footer>
