Added the new project segment

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
           <div class="project-img two"></div>
         </a>
       </div>
+      <div class="project-segment">
+        <h3 class="project-title">E-Commerce Site</h3>
+        <a class="nav" href="work.html?id=2" rel=nofollow>
+          <div class="project-img three"></div>
+        </a>
+      </div>
     </section>
   </main>
   <footer>
